[package]
name = "vtt"
version = "0.1.0"
authors = ["Fey Naomi Schrewe <fey@posteo.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "*"
winit = "*"
glutin = "*"
serde = "*"
rmp-serde = "*"
tokio = { version = "1", features = ["full"] }
cgmath = "*"
image = "*"
itertools = "*"
