[package]
name = "vtt"
version = "0.1.0"
authors = ["Fey Naomi Schrewe <fey@posteo.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "*"
glutin = "*"
winit = "*"
tokio = { version = "1", features = ["full"] }
serde = "*"
rmp-serde = "*"
tokio-serde = "*"
cgmath = "*"
image = "*"
itertools = "*"
font-kit = "*"
harfbuzz_rs = "*"